UPT: add files field in package json to include only the necessary file to npm

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "type": "git",
     "url": "https://github.com/leviero/node-logs"
   },
+  "files": [
+    "index.js"
+  ],
   "author": "Leviero",
   "license": "MIT",
   "devDependencies": {
