--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-logs",
+  "name": "@lalamove/logs",
   "version": "1.0.0",
   "description": "A logger library for lalamove",
   "main": "index.js",
@@ -13,7 +13,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/leviero/node-logs"
+    "url": "https://github.com/lalamove/node-logs"
   },
   "files": [
     "index.js"
