--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tap": "11.0.1"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0"
+    "babel-polyfill": "^6.26.0",
+    "proxy-polyfill": "^0.3.0"
   }
 }
